--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
-          git config user.name EunsuLee
+          git config user.name ywhwe
           git config user.email esromer@kyonggi.ac.kr
           git add -A .
           git commit -m "generated"
