--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Commit & Push
         run: |
           git config user.name ywhwe
-          git config user.email esromer@kyonggi.ac.kr
+          git config user.email dldmstn5908@naver.com
           git add -A .
           git commit -m "generated"
           git push
